Quick fix to display a larger equation and keypad on larger screens. I hope it doesn't break display on iPhone 4.

--- a/styles/app.css
+++ b/styles/app.css
@@ -166,3 +166,14 @@ uCongrats johtml {
 jooption.operator {
   font-size: large;
 }
+
+@media only screen and (min-width: 760px) {
+  #equation {
+    -webkit-transform: scale(2.5);
+    -webkit-transform-origin: top left;
+  }
+  #keypad {
+    -webkit-transform: scale(1.5);
+    -webkit-transform-origin: bottom right;
+  }
+}
